--- a/halo/docker-compose.yml
+++ b/halo/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       halo_network:
     volumes:
-      - ./halo2:/root/.halo2
+      - ../halo2:/root/.halo2
     ports:
       - "8090:8090"
     healthcheck:
@@ -34,7 +34,7 @@ services:
     networks:
       halo_network:
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - ../db:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD", "pg_isready" ]
       interval: 10s
