feat(nginx): 添加游戏平台服务配置
添加 game.qingfengyueying.xyz 的 Nginx 配置，包括上游服务定义、WebSocket 支持和缓存控制

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,4 +62,67 @@ http {
             proxy_read_timeout 30s;
         }
     }
+
+    # Upstream for Game service
+    upstream game_backend {
+        server host.docker.internal:8569;
+    }
+
+    # Server block for game.qingfengyueying.xyz (游戏平台)
+    server {
+        listen 80;
+        listen 443 ssl;
+        server_name game.qingfengyueying.xyz;
+
+        # SSL配置 (如果有SSL证书配置文件)
+        # include conf.d/ssl.conf;
+
+        # 设置客户端最大请求体大小
+        client_max_body_size 50M;
+
+        # Socket.IO 专用路由，确保 WebSocket 升级与超时
+        location /socket.io/ {
+            proxy_pass http://game_backend/socket.io/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket 支持
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # 增加超时时间以支持长连接
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+            proxy_buffering off;
+        }
+
+        # 主要应用路由
+        location / {
+            proxy_pass http://game_backend/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket 支持
+            proxy_http_version 1.1;
+            proxy_redirect off;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # 增加超时时间
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+
+            # 完全禁用缓存，确保每次请求都获取最新文件
+            add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            add_header Pragma no-cache;
+            add_header Expires 0;
+        }
+    }
 }
