fix: 修复.gitignore忽略TypeScript文件的问题，添加缺失的配置文件
- 修复.gitignore中过于宽泛的*.ts规则，避免忽略TypeScript源文件
- 添加vite.config.ts配置文件
- 添加游戏相关的hooks和store目录
- 添加类型定义文件

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,12 @@ msbuild.wrn
 # Log file
 *.log
 
-# M3U8
-*.ts
+# M3U8 (HLS video segments)
 *.m3u8
+# Only ignore HLS video segment .ts files, not TypeScript files
+# Use more specific patterns if needed, e.g.:
+# video_segments/*.ts
+# hls_output/*.ts
 
 # BlueJ files
 *.ctxt
