fix: 修复Nginx容器网络连接配置
- 修改nginx.conf中的upstream配置，使用容器名替代host.docker.internal
- 更新nginx docker-compose.yml，添加game_network网络连接
- 确保Nginx可以正确连接到游戏服务容器

--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -9,8 +9,12 @@ services:
       - ./logs:/var/log/nginx
     networks:
       - halo_network
+      - game_network
 
 networks:
   halo_network:
     external: true
     name: halo_halo_network
+  game_network:
+    external: true
+    name: game_default
