--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,7 +65,7 @@ http {
 
     # Upstream for Game service
     upstream game_backend {
-        server host.docker.internal:8569;
+        server game-gomoku-app-1:8569;
     }
 
     # Server block for game.qingfengyueying.xyz (游戏平台)
