fix: 暂时注释SSL配置以修复Nginx启动问题
- 注释掉443端口SSL监听，因为当前没有配置SSL证书
- 确保Nginx可以正常启动并提供HTTP服务

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -71,7 +71,7 @@ http {
     # Server block for game.qingfengyueying.xyz (游戏平台)
     server {
         listen 80;
-        listen 443 ssl;
+        # listen 443 ssl;
         server_name game.qingfengyueying.xyz;
 
         # SSL配置 (如果有SSL证书配置文件)
