feat: 添加admin.qingfengyueying.xyz管理后台重定向
- 新增admin域名配置，重定向到blog.qingfengyueying.xyz/console/dashboard
- 使用301永久重定向，便于管理后台访问

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,6 +63,17 @@ http {
         }
     }
 
+    # Server block for admin.qingfengyueying.xyz (管理后台重定向)
+    server {
+        listen 80;
+        server_name admin.qingfengyueying.xyz;
+
+        # 重定向到博客管理后台
+        location / {
+            return 301 http://blog.qingfengyueying.xyz/console/dashboard;
+        }
+    }
+
     # Upstream for Game service
     upstream game_backend {
         server game-gomoku-app-1:8569;
