--- a/game/.env.example
+++ b/game/.env.example
@@ -1,4 +1,16 @@
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_OR_ANON_KEY=your-anon-key
+# 应用配置
+NODE_ENV=production
+PORT=6958
+
+# 域名配置（生产环境）
+DOMAIN_NAME=yourdomain.com
+
+# SSL证书路径（生产环境）
+SSL_CERT_PATH=./nginx/ssl/cert.pem
+SSL_KEY_PATH=./nginx/ssl/key.pem
+
+# 日志级别
+LOG_LEVEL=info
+
+# CORS配置（可选）
+CORS_ORIGIN=*
