--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
     # Upstream for Halo service
     upstream halo_backend {
-        server halo:8090;
+        server host.docker.internal:8001;
     }
 
     # Server block for www.qingfengyueying.xyz
@@ -76,24 +76,57 @@ http {
 
     # Upstream for Game service
     upstream game_backend {
-        server game-gomoku-app-1:6958;
+        server host.docker.internal:8002;
     }
 
-    # Server block for game.qingfengyueying.xyz (游戏平台)
+    # game.qingfengyueying.xyz 服务器配置 - 纯前端应用
+    server {
+        listen 80;
+        server_name game.qingfengyueying.xyz;
+
+        # 启用gzip压缩
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+
+
+        # 主要的应用程序路由 - 静态文件服务
+        location / {
+            proxy_pass http://game_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 静态文件缓存
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                proxy_pass http://game_backend;
+                proxy_cache_valid 200 1d;
+                add_header Cache-Control "public, immutable";
+            }
+        }
+    }
+
+    # Upstream for Socket service
+    upstream socket_backend {
+        server host.docker.internal:9001;
+    }
+
+    # Server block for socket.qingfengyueying.xyz (Socket信令服务器)
     server {
         listen 80;
         # listen 443 ssl;
-        server_name game.qingfengyueying.xyz;
+        server_name socket.qingfengyueying.xyz;
 
         # SSL配置 (如果有SSL证书配置文件)
         # include conf.d/ssl.conf;
 
         # 设置客户端最大请求体大小
-        client_max_body_size 50M;
+        client_max_body_size 10M;
 
         # Socket.IO 专用路由，确保 WebSocket 升级与超时
         location /socket.io/ {
-            proxy_pass http://game_backend/socket.io/;
+            proxy_pass http://socket_backend/socket.io/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -109,11 +142,18 @@ http {
             proxy_send_timeout 600;
             proxy_read_timeout 600;
             proxy_buffering off;
+
+            # 禁用缓存
+            proxy_cache off;
+            proxy_no_cache 1;
+            proxy_cache_bypass 1;
         }
+
+
 
         # 主要应用路由
         location / {
-            proxy_pass http://game_backend/;
+            proxy_pass http://socket_backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -130,7 +170,7 @@ http {
             proxy_send_timeout 600;
             proxy_read_timeout 600;
 
-            # 完全禁用缓存，确保每次请求都获取最新文件
+            # 禁用缓存
             add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
             add_header Pragma no-cache;
             add_header Expires 0;
