--- a/game/docker-compose.yml
+++ b/game/docker-compose.yml
@@ -1,22 +1,13 @@
 services:
-  # Node.js应用服务
+  # 前端静态文件服务
   gomoku-app:
     build: .
     restart: unless-stopped
     ports:
-      - "6958:6958"
+      - "8002:8002"
     environment:
       - NODE_ENV=production
-      - PORT=6958
-    volumes:
-      # 挂载日志目录
-      - ./logs/app:/app/logs
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:6958/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+
 
 networks:
   default:
