refactor(docker): 修改卷挂载路径为上级目录
将halo和postgresql服务的卷挂载路径从当前目录改为上级目录，以更好地组织项目文件结构

--- a/halo/docker-compose.yml
+++ b/halo/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       halo_network:
     volumes:
-      - ./halo2:/root/.halo2
+      - ../halo2:/root/.halo2
     ports:
       - "8001:8090"
 
@@ -28,7 +28,7 @@ services:
     networks:
       halo_network:
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - ../db:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=openpostgresql
       - POSTGRES_USER=halo
