--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./logs:/var/log/nginx
+      - /dockerdata/nginx/logs:/var/log/nginx
     networks:
       - halo_network
       - game_network
