fix: 修复nginx配置文件中的Docker容器名称
- 将halo_backend从host.docker.internal:8001更新为halo-halo-1:8090
- 将game_backend从host.docker.internal:8002更新为game-gomoku-app-1:8002  
- 将socket_backend从host.docker.internal:9001更新为qfyy-socket-server:9001
- 解决Linux环境下host.docker.internal无法解析的问题

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
     # Upstream for Halo service
     upstream halo_backend {
-        server host.docker.internal:8001;
+        server halo-halo-1:8090;
     }
 
     # Server block for www.qingfengyueying.xyz
@@ -76,7 +76,7 @@ http {
 
     # Upstream for Game service
     upstream game_backend {
-        server host.docker.internal:8002;
+        server game-gomoku-app-1:8002;
     }
 
     # game.qingfengyueying.xyz 服务器配置 - 纯前端应用
@@ -109,7 +109,7 @@ http {
 
     # Upstream for Socket service
     upstream socket_backend {
-        server host.docker.internal:9001;
+        server qfyy-socket-server:9001;
     }
 
     # Server block for socket.qingfengyueying.xyz (Socket信令服务器)
